--- a/manuscript.tex
+++ b/manuscript.tex
@@ -335,6 +335,7 @@ Here, Koenig describe different ways to represent a pitch range.
 \end{MyShadequote}
 
 \subsection{Comparison}
+\label{sub:comparison}
 
 \begin{figure}[!htb]
   \centering
@@ -379,31 +380,91 @@ In that regard, this idea is belong both to sound and to serial thinking, as it 
 In the next section I will try to refer to this concepts in different time ranges.
 
 The last concept is the representation of pitch ranges.
-It is clearly a serial concept, but part of it, especially the ``transitional'' representation, remind me the ``Mistiness'' to ``clearing-up'' process of Ligeti.
+It is clearly a serial concept, but part of it, especially the ``transitional'' representation, reminds me the ``Mistiness'' to ``clearing-up'' process of Ligeti.
 Extract this idea from its serial way of thinking, and it can be seen as a very expressive description of relationships between ``planes'' of sounds and melodies, including intermediate states.
 
-\section{Ligeti's Remifications}
+\section{Analysis of Ligeti's Ramifications}
 \label{sub:ramifications}
 
-Ligeti ideals and characteristics as found in Remifications.
+In this section I analyze Ligeti's Ramifications according to the concepts described before.
+The order of the concepts in the analysis will follow the three categories described in the last section (\ref{sub:comparison}), starting from sound, through serializm and finally to higher level expressions.
+In each category I analyze general concepts first when applicable.
+
+The analysis was made by hearing a recording of Ramification from 2003 (\cite{rami_music}).
+I found the recording more informative than the composition score;
+meaning that Ligeti's ideas such as misleading notation and flexible rhythm appears more clearly in the audible result than in the score itself.
+Throughout the analysis I refer to timestamps in the piece for examples based on this recording.
+
+\subsection*{Non-stationary sounds of unlimited length}
+
+Ligeti presents these ideas throughout the whole composition.
+There are only brief sections where the music does not present an infinite texture of polyphonic lines.
+The polyphonic lines, as Ligeti explains, are not meant to be heard by themselves.
+Their purpose is to serve the overall texture, the ``woven cobweb''.
+Koenig ideas of non-stationary sounds and sounds of unlimited length fits this composition nicely.
+
+\subsection*{Lower level building blocks}
+
+This concept is coupled tightly to the process of electronically creating sounds.
+Hence, it is not trivial to extract some fundamental concepts from this process, to be relevant to Ramifications.
+Nevertheless, Stockhausen argues that ``one would not proceed from sound properties that had already been experienced'' (\cite[p. 42]{stockhausen}).
+In that regard, I think that Ligeti does not relies on already established properties of the sound and their derivatives, but rather explores different low level blocks.
+Compared to the historically established melody / harmony building blocks of western music Ligetis' foundations include the already discussed concepts of micropolyphony, flexible rhythm and misleading notation.
 
 \subsection*{Micropolyphony, flexible rhythm and misleading notation}
 
-This ideas are perhaps the most dominants in this composition.
+Beyond the general concepts above, this ideas are perhaps the most dominants in this composition.
 Examples can be found in the 0:00 - 1:55, 4:20 - 4:35, 5:28 - 6:25.
 
-\subsection*{Machine like music / Meccanico-type}
+\subsection*{Sound as a formal event}
 
-It appears to me that these idea could be counted together with the previous ones.
-On the other hand, some parts in Remifications are dominated by more ``machine-like'' characteristics than others.
-For example: 5:28 - 6:25, 7:00 - 8:00.
+There are some more consonant sounds in this composition that serve somewhat as a structuring tool;
+they divide the composition into sections.
+Namely, the first one is found in 2:28, and it marks the end of the first part of the composition and divide it from the rest.
+The second obvious sound event is found in 6:45.
+It marks the beginning of the last section of the composition.
+
+\subsection*{Noise}
+
+Noise, as Stockhausen describe it, is found in this composition mainly in the rhythm layer, and it might be understood in two different ways:
+
+\begin{itemize}
+  \item First, the micropolyphony and flexible rhythm presented in this composition can be understood as a noise like phenomenon;
+  the players repetitive melody lines are not part of a clearly structured rhythm;
+  the lines might share the same beat for a moment and then gradually shift back to different tempi (1:01 - 1:24 or 5:32 - 6:25 for example).
+  \item Second, the absence of audible bars can also be understood as noise.
+  The bar lines are a natural part of western music, and take an important role in dividing the melody / harmony into repeatable mid-level structure.
+  In Ramification they can't be heard.
+  Instead, the mid-level structure is much more dynamic; one cannot anticipate it as with traditional bars.
+\end{itemize}
+
+\subsection*{The correlation of timbre, pitch, intensity and duration}
+
+Although this idea can be understood outside of serial thinking, as I argued before, I'm unable to find its occurrence in Ramifications.
+This concept is, perhaps, too contradicted to Ligeti's way of thinking.
+I will refer to this open issue again later, in the discussion.
+
+\subsection*{Representation of pitch ranges}
+
+This idea shines throughout Ramifications.
+The opening of the piece serve as a good example.
+From the start, Ligeti `represent' a very narrow pitch range, using a sound plane.
+This sound plane is in a transitory mode most of the time;
+the sound repeatedly moved back and forth between dense textures and recognizable melodic lines.
+In addition, after one minute the plane starts to move and expand its higher bound to higher pitches.
+This trend accelerate till 2:19, where, by slowing the patterns and reducing the layer, the plane transitions into a unison.
 
 \subsection*{Hectic quality / Gesticulation / Deep-frozen expressionism}
 
-Gesticulated phrases appears in Remifications only for short periods, they are not characterize the composition as a hole.
-Nevertheless, we can note two ``overly exaggerated'' phrases, where the primer is a bit more distinct in that manner: 3:36 - 3:45, 6:28 - 6:40.
-One could argue that these are just dramatic phrases within the composition, but I suspect that this amount of vibrato in Ligeti's composition most present some decent amount of cynicism.
-TODO cite frigyesi to support this statement.
+Gesticulated phrases appears in Ramifications only for short periods, they are not characterize the composition as a whole.
+Nevertheless, I can note two ``overly exaggerated'' phrases, where the primer is a bit more distinct for that mater: 3:36 - 3:45, 6:28 - 6:40.
+One could argue that these are just dramatic phrases within the composition, but I suspect that this amount of vibrato in Ligeti's composition most represent some decent amount of sarcasm (TODO cite frigyesi).
+
+\subsection*{Machine like music / Meccanico-type}
+
+It appears to me that this idea could be counted together with those presented in the micropolyphony, flexible rhythm and misleading notation above.
+On the other hand, some parts in Ramifications are more dominated by ``machine-like'' characteristics than others.
+For example: 4:23 - 4:53, 5:28 - 6:25, 7:00 - 8:00.
 
 \subsection*{‘Mistiness’ to ‘clearing-up’ process}
 
