Introduction and targets

--- a/manuscript.tex
+++ b/manuscript.tex
@@ -40,16 +40,25 @@
 \section{Introduction and targets}
 \label{sec:introduction}
 
-% Citations tests
-Ligeti in conversation: (\cite{varnai}).
-Stockhausen paper: (\cite{stockhausen}).
-Koenig paper: (\cite{koenig})
-Ligeti music: (\cite{rami_music}).
-Stockhausen music: (\cite{gesang_music}).
-Koenig music: (\cite{todo_music}).
-Ligeti score: (\cite{rami}).
-Stockhausen score: (\cite{gesang}).
-The electronic works of Gy{\"o}rgy Ligeti and their influence on his later style: (\cite{levy2006}).
+Electronic music is usually defined as music that produced using electronic devices (TODO cite).
+In addition to creation techniques, electronic music presents several unique aesthetic characteristics.
+These where explored by researchers and composers since the early forays into the field in the late 1940\textsubscript{s}.
+
+The current work deals with the following research question:
+\emph{Are aesthetics of electronic music obligating the use of electronic sound creation?}
+
+In order to answer this question I will collect ideas and concepts by three of the greatest composers of the 2\textsuperscript{nd} half of the 20\textsuperscript{th} century: Gy{\"o}rgy Ligeti, Karlheinz Stockhausen, and Gottfried Michael Koenig.
+Some of these ideas, namely, those of Stockhausen and Koenig, represents aesthetic values of electronic music explicitly.
+Ligeti, on the other hand, is not an electronic music composer;
+the concepts that he presents encapsulate his attitude towards music and composition in general.
+
+After listing and explaining the different ideas I will try to find common concepts.
+Throughout this process I hypothesize that most electronic music aesthetics can be realized in Ligeti's instrumental music.
+
+Finally I will analyze a piece by Ligeti --- Ramification, for 12 solo strings (\cite{rami}) --- to support my argument.
+I will show that most of the different concepts, those of Ligeti, that explicitly refer to instrumental music, as well as those of Stockhausen and Koenig, which deals with electronic music explicitly, can be used to understand this instrumental piece.
+
+More generally, understanding electronic music as \textbf{a way of thinking} rather than a way to create sound using electronic devices may shed a light over instrumental music by composers with former electronic music education as Ligeti, and even more important, on instrumental music that live side by side with electronically created music for almost 70 years.
 
 \section{Historical Review}
 \label{sec:historical_Review}
@@ -107,7 +116,7 @@ Some of the hereby presented concepts are my summaries to the ideas found in the
 For those, I add clarification only when absolutely necessary, as I think that most of the concepts are relatively self-explanatory.
 
 Later in this section I will compare these ideas, and search for similarities and differences between them.
-A unified understanding of the different ideas by the different composers will be used in the next section to analyze  Ligeti's Ramifications.
+A unified understanding of the different ideas by the different composers will be used in the next section to analyze Ligeti's Ramifications.
 
 \subsection{Ligeti}
 \label{sub:eshtetic_ligeti}
