Minor English improvements

--- a/manuscript.tex
+++ b/manuscript.tex
@@ -58,7 +58,7 @@ Throughout this process I hypothesize that most electronic music aesthetics can 
 Finally I will analyze a piece by Ligeti --- Ramification, for 12 solo strings (\cite{rami}) --- to support my argument.
 I will show that most of the different concepts, those of Ligeti, that explicitly refer to instrumental music, as well as those of Stockhausen and Koenig, which deals with electronic music explicitly, can be used to understand this instrumental piece.
 
-More generally, understanding electronic music as \textbf{a way of thinking} rather than a way to create sound using electronic devices may shed a light over instrumental music by composers with former electronic music education as Ligeti, and even more important, on instrumental music that live side by side with electronically created music for almost 70 years.
+More generally, understanding electronic music as \textbf{a way of thinking} rather than a way to create sound using electronic devices may shed a light over instrumental music by composers with former electronic music education as Ligeti, and even more important, on instrumental music that lives side by side with electronically created music for almost 70 years.
 
 \section{Historical Review}
 \label{sec:historical_Review}
@@ -80,7 +80,7 @@ During the 1951 Darmstadt summer courses he attended lectures by Meyer-Eppler th
 In 1953 he moved to Cologne where he studied music technology at the Cologne Hochschule f{\"u}r Music and attended courses on electronic data processing at the University of Cologne.
 At the same time he started to work at the studios for electronic music in Cologne, the Nordwest Deutscher Radio (NWDR), first as assistant for other composers and later as a permanent employee and composer (\cite{koenig_grove}).
 
-Darmstadt of post Wold War II became an important center for modern music thereby an attractive place for young composers.
+Darmstadt of post Wold War II became an important center for modern music and thereby an attractive place for young composers.
 The city is located in the state of Hessen in central Germany, in the American zone of occupation of those days.
 The summer courses were financial supported by the US military government with two goals:
 first, to propagate American values in effort to reeducate the German population in preparation for the establishment of democratic institutions;
@@ -88,10 +88,10 @@ and second, to provide a meeting place where musicians from the former fascist o
 Since the first Darmstadt summer course, in 1948, the focus was on current musical concepts;
 at the time it was, mainly, electronic and serail music\footnote{Internationales Musicinstitut Darmstadt: www.internationales-musikinstitut.de/en/summer-course/history/210-history.html}.
 
-In addition to Darmstadt summer courses, the electronic music studios of Cologne were another prominent center for the Darmstadt-Cologne avant guard scene.
+In addition to Darmstadt summer courses, the electronic music studios of Cologne --- the NWDR --- were another prominent center for the Darmstadt-Cologne avant guard scene.
 The studios were founded in 1951, focused on the creation of pure electronic or ``electroacoustic'' music.
 It is believed that the term ``electroacoustic'' was coined by Meyer-Eppler, one of the founders of the studios, to distinguish themselves from musique-concr{\`e}te:
-a technique that characterized the already established style of Parisian electronic music (\cite{nwdr}).
+a technique that characterized the already established style of Parisian electronic music\footnote{Martian Arts -- The Birth of Electronic Music Recording Studios: http://www.martianarts.net/web/culture/technology/105-the-birth-of-electronic-music-recording-studios}.
 
 The three composers that the current work is about --- Ligeti, Stockhausen and Koenig --- found themselves, each one in its own way, taking part in the Darmstadt-Cologne scene during the 1950\textsuperscript{s}.
 Moreover, they all were in a similar stage of their career when they exposed to the ideas presented in the summer courses and the techniques used in the electronic music studios.
@@ -112,8 +112,8 @@ This work deals with aesthetics of electronic music, hence the decision to choos
 On the other hand, for Ligeti I choose a source with broader perspective, as his music is usually not categorized as electronic.
 Varnai's interview of Ligeti presents a comprehensive set of ideas behind Ligeti's musical style, and I found it useful as a basis to compare the musical concepts with.
 
-Some of the hereby presented concepts are my summaries to the ideas found in the written materials, whereas others are quoted directly from the source.
-For those, I add clarification only when absolutely necessary, as I think that most of the concepts are relatively self-explanatory.
+Some of the following concepts are my summaries to the ideas found in the written materials, whereas others are quoted directly from the source.
+For them, I add clarification only when absolutely necessary, as I think that most of the concepts are relatively self-explanatory.
 
 Later in this section I will compare these ideas, and search for similarities and differences between them.
 A unified understanding of the different ideas by the different composers will be used in the next section to analyze Ligeti's Ramifications.
@@ -380,7 +380,7 @@ This category is probably the most foreign one to Ligeti's way of thinking.
 Moreover, it seems that a unified model of time, as described by Stockhausen, contradict much of Ligetis' concepts from the next category.
 
 The last category is the one for higher level expressions, and is occupied almost solely by Ligetis' ideas.
-These concepts based on expressions and feelings, and are characterized by descriptions that are not musical in their nature.
+These concepts are based on expressions and feelings, and are characterized by descriptions that are not musical in their nature.
 
 Two concept are not categorized simply into these three categories.
 Noise, for example, as described by Stockhausen, can be understood in every time range;
@@ -423,7 +423,7 @@ Compared to the historically established melody / harmony building blocks of wes
 \subsection*{Micropolyphony, flexible rhythm and misleading notation}
 
 Beyond the general concepts above, this ideas are perhaps the most dominants in this composition.
-Examples can be found in the 0:00 - 1:55, 4:20 - 4:35, 5:28 - 6:25.
+Examples can be found in 0:00 - 1:55, 4:20 - 4:35, 5:28 - 6:25.
 
 \subsection*{Sound as a formal event}
 
@@ -451,17 +451,17 @@ Noise, as Stockhausen describe it, is found in this composition mainly in the rh
 
 Although this idea can be understood outside of serial thinking, as I argued before, I'm unable to find its occurrence in Ramifications.
 This concept is, perhaps, too contradicted to Ligeti's way of thinking.
-I will refer to this open issue again later, in the discussion.
+I will refer to this issue again later, in the discussion.
 
 \subsection*{Representation of pitch ranges}
 
 This idea shines throughout Ramifications.
-The opening of the piece serve as a good example.
+The opening of the piece serves as a good example.
 From the start, Ligeti `represent' a very narrow pitch range, using a sound plane.
 This sound plane is in a transitory mode most of the time;
 the sound repeatedly moved back and forth between dense textures and recognizable melodic lines.
 In addition, after one minute the plane starts to move and expand its higher bound to higher pitches.
-This trend accelerate till 2:19, where, by slowing the patterns and reducing the layer, the plane transitions into a unison.
+This trend accelerate till 2:19, where, by slowing the patterns and reducing the layers, the plane transitions into an unison.
 
 \subsection*{Hectic quality / Gesticulation / Deep-frozen expressionism}
 
