--- a/manuscript.tex
+++ b/manuscript.tex
@@ -484,6 +484,26 @@ The most relevant parts I managed to find for this idea are: 1:40 - 2:08, 2:19 -
 \section{General Discussion}
 \label{sec:general_discussion}
 
+In this work I collected ideas and concepts by Ligeti, Stockhausen and Koenig, in order to show that aesthetics of electronic music could be realized in Ligeti's Ramifications, and thereby in instrumental music in general.
+Even from the comparison of the composers ideas I showed that there are lots of similarities between the conceptions that Stockhausen and Koenig refer to as electronic music foundations to those of Ligeti, which are rooted in instrumental music.
+
+Throughout this work I refrained from analyzing serial concepts per-se, and tried to extract ideas that can stand by themselves from the context of serializm when possible.
+As I see it, the fact that Ligeti's music have nothing to do with serializm should not constrain the analysis of its similarity to electronically created music.
+Moreover, I think that the analysis of Ramification using both electronic and instrumental concepts support this argument.
+
+Two of Stockhausen arguments about electronic music are hard to sattle and generalize to a `way of thinking' thing.
+The first is the statement that electronic music most present serializm, inherently.
+A further analysis of Stockhausen's electronic music based on the concepts above may reveal more insights about this issue.
+The other one, which is based on the former, is the concept of unified time model.
+As already mentioned, it seems that this idea contradicts much of Ligeti's way of thinking.
+Again, analysis of Stockhausen's compositions may shed more light about how this concepts are realized, or not, in electronic pieces.
+Compared to Stockhausen, Koenigs' concepts apparently works great with Ligeti's music.
+
+Generally, I think that the current work answer the research question positively, by showing that electronic music concepts are aesthetic ideals; they are more a \textbf{way of thinking} than a technique and a process of sound creation.
+These concepts can be realized in both electronically created and instrumental music.
+Future study might explore how this ideas translate to the music of Stockhausen and Koenig as well.
+It might reveal more insights about realization of different aesthetics and how does they applied to different kinds of music.
+
 \printbibliography[title={Bibliography}]
 
 \end{document}
