--- a/bibliography.bib
+++ b/bibliography.bib
@@ -59,6 +59,12 @@
   url={http://drum.lib.umd.edu/bitstream/1903/3457/1/umi-umd-3281.pdf},
   urldate={2015-07-17}
 }
+@misc{frigyesi,
+  title={Gy{\"o}rgy Ligeti},
+  author={Frigyesi, Judit},
+  year={2006},
+  note={Bar-Ilan University}
+}
 @online{stockhausen_grove,
   author={Richard Toop},
   title={Stockhausen, Karlheinz},
@@ -102,4 +108,12 @@
   site={Martian Arts},
   urldate={2015-09-12},
   url={http://www.martianarts.net/web/culture/technology/105-the-birth-of-electronic-music-recording-studios}
+}
+@online{oxford_electronic_music,
+  title={Electronic music},
+  publisher={Oxford Dictionaries},
+  year={n.d.},
+  note={Oxford University Press},
+  urldate={2015-09-27},
+  url={http://www.oxforddictionaries.com/definition/english/electronic-music}
 }
