--- a/manuscript.tex
+++ b/manuscript.tex
@@ -38,7 +38,7 @@
 \section{Introduction and targets}
 \label{sec:introduction}
 
-Electronic music is usually defined as music that produced using electronic devices (TODO cite).
+According to the Oxford English Dictionary, the definition of electronic music is ``music performed using synthesizers and other electronic instruments'' (\cite{oxford_electronic_music}).
 In addition to creation techniques, electronic music presents several unique aesthetic characteristics.
 These where explored by researchers and composers since the early forays into the field in the late 1940\textsubscript{s}.
 
@@ -63,7 +63,7 @@ More generally, understanding electronic music as \textbf{a way of thinking} rat
 
 Gy{\"o}rgy Ligeti, one of the most innovative musicians of modern 20\textsuperscript{th}-century, was born in Hungary to a Jewish family in 1923.
 After suffering from two tyrannies in his youth, Nazi and Stalinist, he left Hungary in 1956 facing western Europe (\cite{ligeti_grove}).
-There, he was exposed to electronic music through the Darmstadt-Cologne avant guard ideology, which influenced his writing ever since (\cite[p. TODO]{levy2006}).
+There, he was exposed to electronic music through the Darmstadt-Cologne avant guard ideology, which influenced his writing ever since (\cite{levy2006}).
 
 Karlheinz Stockhausen, probably the most prominent German composer of the 2\textsuperscript{nd} half of the 20\textsuperscript{th}-century, was born in Cologne in 1928.
 He enrolled at the Cologne Musikhochschule in 1947 and graduated in 1951.
@@ -93,8 +93,8 @@ a technique that characterized the already established style of Parisian electro
 
 The three composers that the current work is about --- Ligeti, Stockhausen and Koenig --- found themselves, each one in its own way, taking part in the Darmstadt-Cologne scene during the 1950\textsuperscript{s}.
 Moreover, they all were in a similar stage of their career when they exposed to the ideas presented in the summer courses and the techniques used in the electronic music studios.
-These ideas deeply influenced their styles as composers (TODO cite).
-However, whereas Stockhausen and Koenig musical styles are direct continuations of these ideas, Ligeti's music cannot be perceived as part of Darmstadt-Cologne style (TODO cite);
+These ideas deeply influenced their styles as composers.
+However, whereas Stockhausen and Koenig musical styles are direct continuations of these ideas, Ligeti's music cannot be perceived as part of Darmstadt-Cologne style (\cite{levy2006});
 his main repertoire is acoustic, and his works are usually not categorized as serial music.
 
 \section{Aesthetic Ideals in Electronic Music}
@@ -136,7 +136,7 @@ Ligeti was not listed his concepts explicitly, hence the categorization is done 
 \end{MyShadequote}
 
 Indeed, researchers often describe Ligeti's music as pale and nervous dream-like (or even nightmarish) reflection of life.
-``Grand emotions are captured in a manner that they do not sound real or believable'' argues Frigyesi, ``gestures exaggerate to the point that it becomes surreal, frightening, absurd, or even comical'' (TODO Frigeyesi).
+``Grand emotions are captured in a manner that they do not sound real or believable'' argues Frigyesi, ``gestures exaggerate to the point that it becomes surreal, frightening, absurd, or even comical'' (\cite*{frigyesi}).
 
 \subsubsection{Machine like music / Meccanico-type}
 \label{subs:ligeti:machine}
@@ -146,7 +146,7 @@ Indeed, researchers often describe Ligeti's music as pale and nervous dream-like
   Transposed into music, the ticking of malfunctioning machinery occurs in many of my works (p. 16).
 \end{MyShadequote}
 
-In addition, researchers pointed out that Ligeti's machines always brake down in his music, what makes them only more frightening (TODO cite).
+In addition, researchers pointed out that Ligeti's machines always brake down in his music, what makes them only more frightening (\cite{frigyesi}).
 
 \subsubsection{Micropolyphony}
 \label{subs:ligeti:micropolyphony}
@@ -243,8 +243,8 @@ Pitch spread across the 7 octaves of the piano;
 Tempo and rhythm range from 1/16 of a second up to 8 seconds;
 Lastly, time spans of 8 to 1024 seconds are intercepted as structural building blocks.
 
-Based on the above, Stockhausen approaches electronic music as a tool for total serializm (TODO total serializm reference).
-Furthermore, he argues that serializm must exist in electronic composition, inherently.
+Based on the above, Stockhausen approaches electronic music as a tool for serialism.
+Furthermore, he argues that serialism must exist in electronic composition, inherently.
 
 \subsubsection{Lower level building blocks}
 \label{subs:stockhausen:sound}
@@ -319,7 +319,7 @@ Electronic music enhances the timbre possibilities with another class:
 \subsubsection{Representation of pitch ranges}
 \label{subs:koenig:pitch_ranges}
 
-This paper deals mainly with serializm, and how it is applied to electronic music.
+This paper deals mainly with serialism, and how it is applied to electronic music.
 The following idea came from this way of thinking, in serias, but I believe that it might by understood and analyzed even without considering serial decisions.
 Here, Koenig describe different ways to represent a pitch range.
 
@@ -348,7 +348,7 @@ Here, Koenig describe different ways to represent a pitch range.
   \centering
   \textbf{Categorization of ideas}\par\medskip
   \includegraphics[width=\linewidth]{graphics/concepts_categorization.pdf}
-  \caption{Subjective categorization of ideas to sound, serializm and high level expressions.}
+  \caption{Subjective categorization of ideas to sound, serialism and high level expressions.}
   \label{fig:concepts_categorization}
 \end{figure}
 
@@ -370,8 +370,8 @@ It is important to note though that Ligeti's interest in the modification of tim
 The same might be applied to Stockhausen and Koenig as well, whereas the larger context is the serial way of thinking the modification of timbre is part of.
 Serial aesthetics in electronic music is beyond the scope of the current work, thereby I will refrain from answering that question.
 
-The second category I found is serializm.
-As mentioned earlier, I will not deal directly with serializm in the current work.
+The second category I found is serialism.
+As mentioned earlier, I will not deal directly with serialism in the current work.
 However, there are some concepts that are rooted in serial way of thinking that can be generalized and understood by themselves.
 Concepts like these, despite their problematic source, are not ignored and will be analyzed in the next section.
 This category is probably the most foreign one to Ligeti's way of thinking.
@@ -394,7 +394,7 @@ Extract this idea from its serial way of thinking, and it can be seen as a very 
 \label{sub:ramifications}
 
 In this section I analyze Ligeti's Ramifications according to the concepts described before.
-The order of the concepts in the analysis will follow the three categories described in the last section (\ref{sub:comparison}), starting from sound, through serializm and finally to higher level expressions.
+The order of the concepts in the analysis will follow the three categories described in the last section (\ref{sub:comparison}), starting from sound, through serialism and finally to higher level expressions.
 In each category I analyze general concepts first when applicable.
 
 The analysis was made by hearing a recording of Ramification from 2003 (\cite{rami_music}).
@@ -465,7 +465,7 @@ This trend accelerate till 2:19, where, by slowing the patterns and reducing the
 
 Gesticulated phrases appears in Ramifications only for short periods, they are not characterize the composition as a whole.
 Nevertheless, I can note two ``overly exaggerated'' phrases, where the primer is a bit more distinct for that mater: 3:36 - 3:45, 6:28 - 6:40.
-One could argue that these are just dramatic phrases within the composition, but I suspect that this amount of vibrato in Ligeti's composition most represent some decent amount of sarcasm (TODO cite frigyesi).
+One could argue that these are just dramatic phrases within the composition, but I suspect that this amount of vibrato in Ligeti's composition most represent some decent amount of sarcasm.
 
 \subsection*{Machine like music / Meccanico-type}
 
@@ -485,12 +485,12 @@ The most relevant parts I managed to find for this idea are: 1:40 - 2:08, 2:19 -
 In this work I collected ideas and concepts by Ligeti, Stockhausen and Koenig, in order to show that aesthetics of electronic music could be realized in Ligeti's Ramifications, and thereby in instrumental music in general.
 Even from the comparison of the composers ideas I showed that there are lots of similarities between the conceptions that Stockhausen and Koenig refer to as electronic music foundations to those of Ligeti, which are rooted in instrumental music.
 
-Throughout this work I refrained from analyzing serial concepts per-se, and tried to extract ideas that can stand by themselves from the context of serializm when possible.
-As I see it, the fact that Ligeti's music have nothing to do with serializm should not constrain the analysis of its similarity to electronically created music.
+Throughout this work I refrained from analyzing serial concepts per-se, and tried to extract ideas that can stand by themselves from the context of serialism when possible.
+As I see it, the fact that Ligeti's music have nothing to do with serialism should not constrain the analysis of its similarity to electronically created music.
 Moreover, I think that the analysis of Ramification using both electronic and instrumental concepts support this argument.
 
 Two of Stockhausen arguments about electronic music are hard to sattle and generalize to a `way of thinking' thing.
-The first is the statement that electronic music most present serializm, inherently.
+The first is the statement that electronic music most present serialism, inherently.
 A further analysis of Stockhausen's electronic music based on the concepts above may reveal more insights about this issue.
 The other one, which is based on the former, is the concept of unified time model.
 As already mentioned, it seems that this idea contradicts much of Ligeti's way of thinking.
