--- a/manuscript.tex
+++ b/manuscript.tex
@@ -493,9 +493,9 @@ Two of Stockhausen arguments about electronic music are hard to sattle and gener
 The first is the statement that electronic music most present serialism, inherently.
 A further analysis of Stockhausen's electronic music based on the concepts above may reveal more insights about this issue.
 The other one, which is based on the former, is the concept of unified time model.
-As already mentioned, it seems that this idea contradicts much of Ligeti's way of thinking.
+As already mentioned, it seems that this idea contradicts with Ligeti's way of thinking.
 Again, analysis of Stockhausen's compositions may shed more light about how this concepts are realized, or not, in electronic pieces.
-Compared to Stockhausen, Koenigs' concepts apparently works great with Ligeti's music.
+Compared to Stockhausen, Koenigs' concepts apparently work great with Ligeti's music.
 
 Generally, I think that the current work answer the research question positively, by showing that electronic music concepts are aesthetic ideals; they are more a \textbf{way of thinking} than a technique and a process of sound creation.
 These concepts can be realized in both electronically created and instrumental music.
